2008-07-18  Thomas Vander Stichele  <thomas at apestaart dot org>

	* env.in (added):
	  add env

2008-07-18  Thomas Vander Stichele  <thomas at apestaart dot org>

	* Makefile.am:
	* configure.ac:
	* env:
	* flumotion/test/Makefile.am:
	* env (deleted):
	  Generate env.

2008-07-17  Arek Korbik  <arkadini@gmail.com>

	* flumotion/component/producers/wms/wms.py: Handle cases with
	multiple connecting sources better. Add more logging.

2008-07-04  Johan Dahlin  <johan@flumotion.com>

	* flumotion/component/encoders/wmv/wmv.py:
	formatStorage moved from f.c.c. to f.c.format.

2008-06-04  Arek Korbik  <arkadini@gmail.com>

	* flumotion/component/producers/wms/wms.py:
	* flumotion/component/producers/wms/wms.xml:
	Add quickly a way to receive WME streams published through a
	WindowsMedia server.

2008-06-04  Johan Dahlin  <johan@flumotion.com>

	* flumotion/component/encoders/wmv/wmv.py:
	* flumotion/component/producers/wms/wms.py:
	Update to the latest flumotion import changes

2008-05-27  Johan Dahlin  <johan@flumotion.com>

	* flumotion/component/encoders/wmv/admin_gtk.py:
	Update to latest flumotion API

2008-05-08  Johan Dahlin  <johan@flumotion.com>

	* flumotion/component/encoders/wma/wma_wizard.py:
	* flumotion/component/encoders/wmv/wmv_wizard.py:
	Update to the latest wizard API.

2008-05-07  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/encoders/wma/wma.xml:
	* flumotion/component/encoders/wmv/wmv.xml:
	  Add description for bitrate.

2008-05-06  Johan Dahlin  <johan@flumotion.com>

	* flumotion/component/encoders/wma/wma_wizard.py:
	* flumotion/component/encoders/wmv/wmv_wizard.py:
	Remove redundant get_next method.
	Update the rest of the API to the latest flumotion changes.

2008-04-17  Johan Dahlin  <johan@flumotion.com>

	* Makefile.am:
	* pkg/debian-common/rules:
	* pkg/ubuntu-gutsy/changelog:
	* pkg/ubuntu-gutsy/control:

	Add initial ubuntu gutsy package
